<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mobappdev.demo.finalexam.problem3.BActivity">

    <RelativeLayout
        android:id="@+id/black_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">
        <TextView
            android:id="@+id/text_123"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_123"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="70sp"
            android:textColor="#636363"
            android:background="#e76b6b"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_45"
            android:layout_below="@id/text_123"
            android:layout_alignParentEnd="true"
            android:textSize="70sp"
            android:textColor="#636363"
            android:background="#6b77e7"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/grey_background"
        android:layout_below="@id/black_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c3c3c3"
        android:padding="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_222"
            android:textSize="70sp"
            android:textColor="#636363"
            android:background="#898989"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/grey_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="85sp"
            android:textColor="#636363"
            android:background="#ffff00"
            android:textAlignment="center"
            />
        <!--The 8 in the example isn't centered so mine isn't either-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="85sp"
            android:textColor="#636363"
            android:background="#fa8e00"
            android:textAlignment="textStart"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="85sp"
            android:textColor="#636363"
            android:background="#fd0000"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="85sp"
            android:textColor="#636363"
            android:background="#fd00fe"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="85sp"
            android:textColor="#636363"
            android:background="#0000ff"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="85sp"
            android:textColor="#636363"
            android:background="#12ff00"
            android:textAlignment="center"
            />

    </LinearLayout>

</RelativeLayout>
